--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "server": "node src/server",
+      "server:dev": "nodemon src/server"
   },
   "keywords": [],
   "author": "",
